--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -25,7 +25,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search Categories" aria-label="Search">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search Categories" name="pic">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
     </form>
   </div>
