--- a/gallery/templates/location.html
+++ b/gallery/templates/location.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {%block content%}
-<h1 class="text-center">Welcome to pictorial</h1>
+<h1 class="text-center">{{location}}</h1>
 <div class="container">
   <div class="row">
     {% for pic in pics%}
