--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,10 @@
-image {
+.modal img {
     width:auto;
-    max-width: 100%;
+    max-width: 80%;
     max-height: 70vh;
     width: auto\9; /* ie8 */
   }
+
   .modal-body{
     text-align: center;
     height: auto;
@@ -12,6 +13,10 @@ image {
   @media (min-width: 768px){
   .modal-dialog {
     width: auto;
-    max-width: 90%;
+    max-width: 80%;
 
+  }
+
+  .card{
+    width: 18rem;
   }
