--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -14,13 +14,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
           Locations
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Nairobi</a>
-          <a class="dropdown-item" href="#">Naivasha</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Other</a>
+          {% for location in locations %}
+                <a class="dropdown-item" href="{%url 'location' location.id %}">{{location.location}}</a>
+                <div class="dropdown-divider"></div>
+          {% endfor %}
         </div>
       </li>
     </ul>
