--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -22,9 +22,8 @@
               <img src="{{pic.image.url}}" alt="{{pic.name}}">
           </div>
           <div class="modal-footer">
-            <input class="form-control" type="text" value="https://pictorial.herokuapp.com{{pic.image.url}}">
-                <button  type="button" value="https://pictorial.herokuapp.com{{pic.image.url}}"  onclick="copyLink(this.value)"
-                         class="btn btn-outline-secondary my-2 my-sm-0 link-btn">Copy Photo Link</button>
+                <button  type="button" value="https://hall-of-james.herokuapp.com{{pic.image.url}}"  onclick="copyLink(this.value)"
+                         class="btn btn-outline-secondary my-2 my-sm-0 link-btn"><i class="far fa-copy"></i> Copy link</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 
           </div>
